<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ednerdaza.activitytechnology.testapplicationbinary.mvc.controllers.activities.AddClientActivity"
    tools:showIn="@layout/activity_add_client">

    <ScrollView
        android:id="@+id/scrollview_add_client"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/textview_nombre_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="NOMBRE:"/>

            <EditText
                android:id="@+id/edittext_nombre_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_below="@+id/textview_nombre_add"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textview_cedula_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edittext_nombre_add"
                android:text="CEDULA:"/>

            <EditText
                android:id="@+id/edittext_cedula_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_cc"
                android:inputType="number"
                android:maxLines="1"
                android:layout_below="@+id/textview_cedula_add"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textview_telefono_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edittext_cedula_add"
                android:text="TELEFONO:"/>

            <EditText
                android:id="@+id/edittext_telefono_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_below="@+id/textview_telefono_add"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textview_email_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edittext_telefono_add"
                android:text="EMAIL:"/>

            <EditText
                android:id="@+id/edittext_email_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_below="@+id/textview_email_add"
                android:singleLine="true" />

            <Button
                android:id="@+id/add_client_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                style="?android:attr/buttonBarButtonStyle"
                android:textStyle="bold"
                android:layout_below="@+id/edittext_email_add"/>

        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
